--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-<script src="./js/d3.v7.min.js"></script>
+<script src='https://d3js.org/d3.v5.min.js'></script>
 <script src="./js/d3-annotation.min.js"></script>
+<script src="./js/core.js"></script>
 
 <head>
     <link rel="stylesheet" href="./css/styles.css">
@@ -9,11 +10,6 @@
 <div class="header">
     <h2>Weight vs MPG</h2>
     <p>American, European, and Japanese cars 1970s to 1982</p>
-</div>
-
-<div>
-
-
 </div>
 
 <body onload='init()'>
@@ -31,57 +27,15 @@
                 ex ea commodo consequat.</p>
         </div>
     </div>
-    <div class="svg">
+    <div id="svg_container" class="svg">
         <svg width=800 height=500>
         </svg>
     </div>
     <div class="control-buttons">
-        <button type="button" class="back-forward-buttons">Back</button>
-        <button type="button" class="restart-button">Restart</button>
-        <button type="button" class="back-forward-buttons">Next</button>
+        <button type="button" id="btn_backward" class="back-forward-buttons">Back</button>
+        <button type="button" id="btn_restart" class="restart-button">Restart</button>
+        <button type="button" id="btn_forward" class="back-forward-buttons">Next</button>
     </div>
-
-    <script>
-        async function init() {
-            d3.csv("https://gonzg0.github.io/416-DataViz-Project2/Automobile.csv").then(function (data) {
-                const car = car => ({ name: car.name, mpg: Number(car.mpg), weight: Number(car.weight), year: Number(19 + car.model_year) });
-
-                usa_vehicles = data.filter(car => car.origin === 'usa').map(car);
-                japanese_vehicles = data.filter(car => car.origin === 'japan').map(car);
-                europe_vehicles = data.filter(car => car.origin === 'europe').map(car);
-
-
-                WIDTH = 500
-                HEIGHT = 400
-                FIFTY = 50
-                margin = 50
-                var x = d3.scaleLog().base(10).domain([10, 150]).range([0, 200]);
-                var y = d3.scaleLog().base(10).domain([10, 150]).range([200, 0]);
-
-                d3.select("svg")
-                    .attr("width", WIDTH + 2 * FIFTY)
-                    .attr("height", HEIGHT + 2 * FIFTY)
-                    .append("g")
-                    .attr("transform", "translate(" + margin + "," + margin + ")")
-                    .selectAll("circle")
-                    .data(avg_mpg)
-                    .enter().append("circle")
-                    .attr("cx", function (d, i) { return x(d.city_mpg); })
-                    .attr("cy", function (d, i) { return y(d.highway_mpg); })
-                    .attr("r", function (d, i) { return 2 + Number(d.cylinders); });
-
-                d3.select("svg")
-                    .append("g")
-                    .attr("transform", "translate(" + 50 + "," + 50 + ")")
-                    .call(d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format('~s')));
-
-                d3.select("svg")
-                    .append("g")
-                    .attr("transform", "translate(" + 50 + "," + 250 + ")")
-                    .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format('~s')));
-            });
-        }
-    </script>
 </body>
 
 <div class="card">
@@ -97,7 +51,7 @@
                     cars of the 80s</a>
             </li>
             <li>
-                <a href="https://gearjunkie.com/camper-rv/1988-mitsubishi-delica-van-life-build">Mitsubishi Delica</a>
+                <a href="https://www.delicausa.com/">Mitsubishi Delica</a>
             </li>
             <li>
                 <a href="https://www.motor1.com/news/61708/soviet-cars-were-weird-volga-gaz-24/">Volga Gaz</a>
@@ -113,3 +67,22 @@
 </div>
 
 </html>
+<script>
+    document.onload = function () {
+        // Array of Images
+        var backgroundImg = [
+            "./images/car1.webp",
+            "./images/europe-car.jpg",
+            "./images/mitsubushi-delica.jpg",
+            "./images/soviet-carvolga-gaz-241.jpg"
+        ]
+
+        setInterval(changeImage, 5000);
+        function changeImage() {
+            var i = Math.floor((Math.random() * 3));
+
+            document.html.style.backgroundImage = "url('" + backgroundImg[i] + "')";
+
+        }
+    }
+</script>
