self explore support

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js" integrity="sha512-iBAeBWWWFb8HqSBcrqcz98iIpuVH1la39dEYHtyQ/pGpeCQTQVvLJOWAuhv2Q7JSHp9k7hWA7sGxU3hHJe+tFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"
+    integrity="sha512-iBAeBWWWFb8HqSBcrqcz98iIpuVH1la39dEYHtyQ/pGpeCQTQVvLJOWAuhv2Q7JSHp9k7hWA7sGxU3hHJe+tFg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- <script src="./js/d3-annotation.min.js"></script> -->
 <script src="./js/core.js"></script>
 
@@ -20,9 +22,34 @@
         </header>
 
         <div id="blurb" class="container">
-            <p>American cars during the era of 1970 to 1982 tended to have higher fuel consumption. Displayed as lower miles per gallon.</p>
-            <p>They also tended to weigh a lot more than their counterparts in europe and japan. We also note a clear tend of less weight relating to higher miles per gallon, but we also see some road tanks with abysmal fuel efficiency of 9 MPG.</p>
-            <p>Also of important note is the disel vehicle displaying better fuel efficiency than its simiarly weighted gasoline counterparts. One downside of the diesel efficiency is emissions, which are higher than gasoline vehicles.</p>
+            <p>American cars during the era of 1970 to 1982 tended to have higher fuel consumption. Displayed as lower
+                miles per gallon.</p>
+            <p>They also tended to weigh a lot more than their counterparts in europe and japan. We also note a clear
+                tend of less weight relating to higher miles per gallon, but we also see some road tanks with abysmal
+                fuel efficiency of 9 MPG.</p>
+            <p>Also of important note is the disel vehicle displaying better fuel efficiency than its simiarly weighted
+                gasoline counterparts. One downside of the diesel efficiency is emissions, which are higher than
+                gasoline vehicles.</p>
+        </div>
+    </div>
+    <div id="tools" class="card tools">
+        <header class="container blue">
+            <h2 id="tool-bar">Tools</h2>
+        </header>
+        <div class="container tools">
+            <br>
+            <label for="name">Start Year:</label>
+            <input type="text" id="start_year" name="name"  pattern="\d*" required min="4" maxlength="4">
+            <label for="name">End Year:</label>
+            <input type="text" id="end_year" name="name" required pattern="\d*" min="4" max="4" maxlength="4">
+            <button type="button" id="btn_year" class="back-forward-buttons">Filter Year</button>
+        </div>
+        <div class="container tools">
+            <br>
+            <label for="name_search">Vehicle name:</label>
+            <input type="text" id="name_search" name="name_search" required minlength="4" size="10">
+            <button type="button" id="btn_name" class="back-forward-buttons">Filter Name</button>
+            <br>
         </div>
     </div>
     <div id="svg_container" class="svg">
@@ -63,4 +90,5 @@
         </ul>
     </div>
 </div>
+
 </html>
