--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </header>
         <div class="container tools">
             <br>
-            <label for="name">Start Year:</label>
-            <input type="text" id="start_year" name="name"  pattern="\d*" required min="4" maxlength="4">
-            <label for="name">End Year:</label>
-            <input type="text" id="end_year" name="name" required pattern="\d*" min="4" max="4" maxlength="4">
+            <label for="name">Start Year (>= 1970):</label>
+            <input type="number" id="start_year" max="99999" name="start_year" pattern="[0-9]+" title="please enter number only" required="required">
+            <label for="name">End Year (<= 1982):</label>
+            <input type="text" id="end_year" name="end_year" pattern="[0-9]+" title="please enter number only" required="required">
             <button type="button" id="btn_year" class="back-forward-buttons">Filter Year</button>
         </div>
         <div class="container tools">
